# MyMatrix

./: .gitignore  MyMatrix.pro  git test.txt
Client/: MyMatrix.pro  agora_rtc_sdk.lib
Client/Forms/: register.ui  usermainwindow.ui
Client/Headers/: BubbleFrame.h  ChatItemBase.h  ChatRole.h  ChatView.h  Matrix_Call.h  MessageTextEdit.h  bubble_frame.h  chat_item_base.h  chat_role.h  chat_view.h  database_controller.h  dialog.h  local_msg.h  login.h  message_text_edit.h  mult_item_data.h  mult_item_delegate.h  picture_bubble.h  register.h  rsa.h  talk_to_server.h  text_bubble.h  user_detail_dlg.h  user_main_window.h  userdetaildlg.h  userinfor.h  usermainwindow.h
Client/Sources/: BubbleFrame.cpp  ChatItemBase.cpp  ChatView.cpp  MessageTextEdit.cpp  PictureBubble.cpp  TextBubble.cpp  bubble_frame.cpp  chat_item_base.cpp  chat_view.cpp  database_controller.cpp  dialog.cpp  login.cpp  main.cpp  matrix_call.cpp  message_text_edit.cpp  mult_item_delegate.cpp  picture_bubble.cpp  register.cpp  talk_to_server.cpp  text_bubble.cpp  user_detail_dlg.cpp  user_main_window.cpp  userdetaildlg.cpp  userinfor.cpp  usermainwindow.cpp
Client/resource/: qss.qrc  register.qss  ui.qrc  userDetailDlg.qss  userMainWindow.qss
Forms/: dialog.ui  register.ui  userdetaildlg.ui  usermainwindow.ui
Headers/: MuListItemData.h  dialog.h  friendlist.h  register.h  userdetaildlg.h  userinfor.h  usermainwindow.h
Server/: Account.hpp  CMakeCache.txt  CMakeLists.txt  CallNumber  Makefile  cmake_install.cmake  main.cpp
Server/include/: AccountDAO.h  AccountData.h  DatabaseUtility.h  MatrixUtility.h  MySQLPool.h  RelationDAO.h  RelationData.h  UserInforDAO.h  UserInforData.h  rsa.h
Server/src/: AccountDAO.cpp  AccountDAO.h  AccountData.cpp  AccountData.h  CMakeLists.txt  DatabaseUtility.cpp  MatrixUtility.cpp  MatrixUtility.h  MySQLPool.cpp  RelationDAO.cpp  RelationDAO.h  RelationData.cpp  RelationData.h  Reply_Call.cpp  Reply_Call.h  UserInforDAO.cpp  UserInforDAO.h  UserInforData.cpp  UserInforData.h  mysqlPool.cpp  mysqlPool.h
Sources/: MuItemDelegate.cpp  dialog.cpp  friendlist.cpp  main.cpp  register.cpp  userdetaildlg.cpp  userinfor.cpp  usermainwindow.cpp
build-MyMatrix-Desktop_Qt_5_13_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h  ui_register.h  ui_usermainwindow.h
build-MyMatrix-Desktop_Qt_5_13_0_MinGW_64_bit-Debug/debug/: moc_dialog.cpp  moc_register.cpp  moc_usermainwindow.cpp  qrc_qss.cpp  (+1 more)
resource/: myStyle.qss  qss.qrc  register.qss  ui.qrc  userMainWindow.qss
