cmake_minimum_required(VERSION 3.2)
PROJECT(MyMatrix_Server)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_COMPILER "g++")
set(BOOST_ROOT "/usr/local/include/boost/")
include_directories("./src")
FIND_PACKAGE(Threads REQUIRED)
SET(Boost_USE_MULTITHREADED ON)
find_package(Boost REQUIRED COMPONENTS system)
aux_source_directory(./ main_src)
add_subdirectory(src)
add_executable(CallNumber ${main_src})
target_link_libraries(CallNumber src)
target_link_libraries(CallNumber mysqlcppconn boost_thread boost_json boost_system ${CMAKE_THREAD_LIBS_INIT})
#target_link_libraries(CallNumber /usr/local/lib/libodb-mysql.so)
#target_link_libraries(CallNumber dl)

